# unlzw3

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-python-package.yml
src/unlzw3/: __init__.py  unlzw.pyx  unlzw3.py  unlzw_pure.py
src/unlzw3/tests/: test_all.py  test_mod.py
